--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=larak75_store
+DB_USERNAME=larak75
+DB_PASSWORD=larak75
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
